--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ openpyxl==3.0.9
 pandas==1.3.3
 python-dateutil==2.8.2
 pytz==2021.3
+requests==2.26.0
 selenium==3.141.0
 six==1.16.0
 urllib3==1.26.7
